# devcontainer-ghactions-poetry

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint-format-typecheck.yaml  lint.yaml  lint.yml  pytest.yaml
tests/: test_basic.py
