[tool.poetry]
name = "devcon"
version = "0.1.0"
description = ""
authors = ["DevCon"]
readme = "README.md"
packages = [{include = "devcon", from = "src"}]

exclude = ["tests/*"]

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = {version = "^3.9.1.post1", extras = ["visualization"], optional = true}
numpy = "^1"
scipy = {version = "^1.14.0", extras = ["ml"], optional = true}

[tool.poetry.extras]
ml = ["scipy"]
visualization = ["matplotlib"]

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
ruff = "^0.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88